<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ContactInfoFragment">

    <ImageView
        android:id="@+id/contact_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/baseline_account_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <me.arsnotfound.mycontacts.ui.view.ContactInfoItem
        android:id="@+id/contact_last_name"
        custom:title="@string/last_name"
        custom:value="@string/last_name_example"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_image" />

    <me.arsnotfound.mycontacts.ui.view.ContactInfoItem
        android:id="@+id/contact_first_name"
        custom:title="@string/first_name"
        custom:value="@string/first_name_example"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_last_name" />

    <me.arsnotfound.mycontacts.ui.view.ContactInfoItem
        android:id="@+id/contact_middle_name"
        custom:title="@string/middle_name"
        custom:value="@string/middle_name_example"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_first_name" />

    <me.arsnotfound.mycontacts.ui.view.ContactInfoItem
        android:id="@+id/contact_phone_number"
        custom:title="@string/phone_number"
        custom:value="@string/phone_example"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_middle_name" />

    <me.arsnotfound.mycontacts.ui.view.ContactInfoItem
        android:id="@+id/contact_day_of_birth"
        custom:title="@string/day_of_birth"
        custom:value="@string/day_of_birth_example"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_phone_number" />

</androidx.constraintlayout.widget.ConstraintLayout>